%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#74c7e8", "primaryBorderColor": "#1f2937", "primaryTextColor": "#111827", "lineColor": "#2f2f2f", "fontFamily": "Arial"}}}%%
classDiagram
  direction LR
  class Role {
    -id : int
    -name : String
    -description : Text
    -created_at : DateTime
  }
  class User {
    -id : int
    -username : String
    -email : Email
    -password_hash : String
    -first_name : String
    -last_name : String
    -phone_number : String
    -is_active : Boolean
    -is_verified : Boolean
    -last_login : DateTime
  }
  class UserAddress {
    -recipient_name : String
    -phone_number : String
    -address_line1 : String
    -address_line2 : String
    -district : String
    -city : String
    -province : String
    -postal_code : String
    -is_default : Boolean
  }
  Role "1" <-- "*" User
  User "1" *-- "*" UserAddress
